contour/kubeapps/kubeapps_service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    projectcontour.io/upstream-protocol.h2c: "80"
    meta.helm.sh/release-name: kubeapps
    meta.helm.sh/release-namespace: kubeapps
  creationTimestamp: "2021-12-15T23:55:56Z"
  labels:
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: kubeapps
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kubeapps
    helm.sh/chart: kubeapps-7.6.2
  name: kubeapps
  namespace: kubeapps
  resourceVersion: "7718"
  uid: 11112a1e-7ffc-45ed-93dd-2e897cd27fc2
spec:
  clusterIP: 10.100.47.220
  clusterIPs:
  - 10.100.47.220
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: kubeapps
    app.kubernetes.io/name: kubeapps
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
