contour/kubeapps/kubeapps_service2.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"meta.helm.sh/release-name":"kubeapps","meta.helm.sh/release-namespace":"kubeapps","projectcontour.io/upstream-protocol.h2":"80","projectcontour.io/upstream-protocol.h2c":"80","projectcontour.io/upstream-protocol.tls":"433"},"labels":{"app.kubernetes.io/component":"frontend","app.kubernetes.io/instance":"kubeapps","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"kubeapps","helm.sh/chart":"kubeapps-7.6.2"},"name": [...]
    meta.helm.sh/release-name: kubeapps
    meta.helm.sh/release-namespace: kubeapps
    projectcontour.io/upstream-protocol.h2c: "80"
  labels:
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: kubeapps
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kubeapps
    helm.sh/chart: kubeapps-7.6.2
  name: kubeapps
  namespace: kubeapps
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: kubeapps
    app.kubernetes.io/name: kubeapps
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
